Updates to work on older devices + QoL
+ replaced all buttons with <div>s that perform the same function
+ Shrunk some of the text when viewing on mobile so that it's more legible
+ Added support for clicking off the modal to close it, instead of requiring the "Go Back" button

--- a/index.html
+++ b/index.html
@@ -47,22 +47,22 @@
                     </h3>
                     <div class="socials-container">
                         <a href="https://super-mctea.itch.io" target="_blank">
-                            <button class="hover-scale">Itch.io</button>
+                            <div class="hover-scale">Itch.io</div>
                         </a>
                         <a href="https://bsky.app/profile/supermctea.bsky.social" target="_blank">
-                            <button class="hover-scale">Bluesky</button>
+                            <div class="hover-scale">Bluesky</div>
                         </a>
                         <a href="https://twitch.tv/super_mctea" target="_blank">
-                            <button class="hover-scale">Twitch</button>
+                            <div class="hover-scale">Twitch</div>
                         </a>
                         <a href="https://twitter.com/supermctea" target="_blank">
-                            <button class="hover-scale">Twitter</button>
+                            <div class="hover-scale">Twitter</div>
                         </a>
                         <a href="https://github.com/Super-McTea" target="_blank">
-                            <button class="hover-scale">Github</button>
+                            <div class="hover-scale">Github</div>
                         </a>
                         <a href="https://www.youtube.com/@Super_McTea" target="_blank">
-                            <button class="hover-scale">YouTube</button>
+                            <div class="hover-scale">YouTube</div>
                         </a>
                     </div>
                 </section>
